# bangler

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bangle_pricing_project_doc.md  bangle_size.txt  debug_discovery.py  discovery_runner.py  pyproject.toml  test_category_search.py  test_discovered_categories.py  test_group_id_search.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: CLI_steps.md  ToDo.md  bangle_math.md  bangle_size.txt  master_plan.md  phase_2_plan.md  price_fix_plan.md  price_mismatch.md  price_mismatch2.md
docs/hs/: hs_1.md  hs_10.md  hs_11.md  hs_2.md  hs_3.md  hs_4.md  hs_5.md  hs_6.md  hs_7.md  hs_8.md  hs_9.md
src/bangler/: __init__.py
src/bangler/api/: __init__.py  stuller_client.py
src/bangler/cli/: __init__.py  display.py  interface.py  main.py  prompts.py
src/bangler/config/: __init__.py  settings.py
src/bangler/core/: __init__.py  discovery.py  pricing_engine.py  validation.py
src/bangler/data/: .gitignore  README.md  sizing_stock_discovery_1758304649.json  sizing_stock_discovery_1758305246.json  sizing_stock_discovery_1758305750.json  sizing_stock_inventory.json
src/bangler/models/: __init__.py  bangle.py  pricing.py
src/bangler/utils/: __init__.py  formatting.py  material_calculation.py  material_density.py  size_conversion.py
