[tool.poetry]
name = "bangler"
version = "1.1.0"
description = "Bangle pricing script for Askew Jewelers"
authors = ["Chance Askew"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
questionary = "^2.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
bangler = "bangler.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"